--- a/partials/home.html
+++ b/partials/home.html
@@ -1,2 +1,7 @@
+<div class="aboutGame">
+  <p>
+    Race the clock to pop as many bubbles as you can!
+  </p>
+</div>
 <a class='play' href="#/game">Play!</a>
 <a class='about' href="#/about">About the game</a>
