updated font to bubble and soap

--- a/main.css
+++ b/main.css
@@ -2,12 +2,12 @@
     background: #FF97E2;
 }
 @font-face {
-    font-family: BubbleRas;
-    src: url(BubbleRas.ttf);
+    font-family: bubblesoap;
+    src: url(/bubblesoap.ttf);
 }
 h1 {
-    font-family: BubbleRas !important;
-    font-size: 10em !important;
+    font-family: bubblesoap !important;
+    font-size: 7em !important;
     color: #5143FD !important;
     text-align: center;
     top: -5%;
@@ -16,36 +16,37 @@ a {
     position: absolute;
     z-index: 1;
     color: #5143FD !important;
-    font-family: BubbleRas;
+    font-family: bubblesoap;
 }
+a:hover {}
 .aboutGame {
     position: absolute;
-    width: 35vw;
-    height: 12vh;
+    width: 45vw;
+    height: 14vh;
     background: linear-gradient(rgba(57, 222, 230, 0.7), #DCCDF2);
-    left: 33%;
-    top: 20%;
+    left: 28%;
+    top: 18%;
     border-style: outset;
     border-radius: 25px;
-    font-size: 4em;
-    font-family: BubbleRas;
-    line-height: .5em;
+    font-size: 3em;
+    font-family: bubblesoap;
+    line-height: 1em;
     text-align: center;
     padding: .3em;
     color: #5143FD !important;
 }
 .play {
-    left: 24%;
-    top: 35%;
-    font-size: 16em;
+    left: 22%;
+    top: 46%;
+    font-size: 9em;
 }
 .about {
     left: 56%;
     top: 65%;
     width: 150px;
     text-align: center;
-    line-height: 45px;
-    font-size: 8em;
+    line-height: 55px;
+    font-size: 4.3em;
 }
 .aboutTitle {
     margin-top: -5%;
@@ -89,22 +90,4 @@ a {
     position: absolute;
     left: 70%;
     top: 80%;
-}
-
-}
-
-}
-
-}
-
-}
-
-}
-
-}
-
-}
-
-}
-
 }
