--- a/partials/home.html
+++ b/partials/home.html
@@ -3,5 +3,7 @@
     Race the clock to pop as many bubbles as you can!
   </p>
 </div>
+<div class="links">
 <a class='play' href="#/game">Play!</a>
 <a class='about' href="#/about">About the game</a>
+</div>
