--- a/partials/about.html
+++ b/partials/about.html
@@ -1,2 +1,4 @@
 <h1 class='aboutTitle'>About the creators</h1>
-<a class='back' href="#/">Back</a>
+<div class="links">
+    <a class='back' href="#/">Back</a>
+</div>
