--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -21,7 +21,9 @@ p.header, p.footer { display: none; }
     font-family: bubbles;
     src: url(../Assets/bubblesoap.ttf);
 }
-div.logo { width: 204px; height: 38px; float: left; background: url(logo.png) 0 0 no-repeat; position: relative; z-index: 10; }
+div.logo { width: 204px; height: 38px;
+  /*float: left; */
+  background: url(logo.png) 0 0 no-repeat; position: relative; z-index: 10; }
 div.title { height: 38px; line-height: 38px; padding: 0 10px; margin: 0 1px 0 0; float: right; color: #333; text-align: right; font-size: 32px; font-family: bubbles; color: #5143FD; position: relative; z-index: 10; }
 .template-wrap { text-align: center; position: absolute; top: 50%; left: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); }
 .template-wrap canvas {
@@ -30,7 +32,7 @@ div.title { height: 38px; line-height: 38px; padding: 0 10px; margin: 0 1px 0 0;
   width: 342px;
   position: relative; z-index: 9; box-shadow: 0 10px 30px rgba(0,0,0,0.2); -moz-box-shadow: 0 10px 30px rgba(0,0,0,0.2); }
 .fullscreen { float: right; position: relative; z-index: 10; }
-#home-link {
+#back-link {
   position: absolute;
   font-family: bubbles;
   font-size: 32px;
