--- a/partials/game.html
+++ b/partials/game.html
@@ -1,5 +1,3 @@
-<!doctype html>
-<html lang="en-us">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -7,28 +5,24 @@
     <script src="TemplateData/UnityProgress.js"></script>
   </head>
   <body class="template">
-    <a id="home-link" href="#">Home</a>
+    <a id="back-link" href="#/home">Back</a>
     <img src="Assets/bubble_thumb.png" alt="" />
     <p class="header"><span>Unity WebGL Player | </span>Bubble Trouble</p>
     <div class="template-wrap clear">
       <canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()"></canvas>
       <br>
       <div class="logo"></div>
-      <div class="title">Bubble Trouble</div>
+      <!-- <div class="title">Bubble Trouble</div> -->
     </div>
-    <p class="footer">&laquo; created with <a href="http://unity3d.com/" title="Go to unity3d.com">Unity</a> &raquo;</p>
     <script type='text/javascript'>
-  var Module = {
-    TOTAL_MEMORY: 268435456,
-    errorhandler: null,			// arguments: err, url, line. This function must return 'true' if the error is handled, otherwise 'false'
-    compatibilitycheck: null,
-    dataUrl: "Release/BubbleWebGL.data",
-    codeUrl: "Release/BubbleWebGL.js",
-    memUrl: "Release/BubbleWebGL.mem",
-
-  };
-</script>
-<script src="Release/UnityLoader.js"></script>
-
+      var Module = {
+        TOTAL_MEMORY: 268435456,
+        errorhandler: null,			// arguments: err, url, line. This function must return 'true' if the error is handled, otherwise 'false'
+        compatibilitycheck: null,
+        dataUrl: "Release/BubbleWebGL.data",
+        codeUrl: "Release/BubbleWebGL.js",
+        memUrl: "Release/BubbleWebGL.mem",
+      };
+    </script>
+    <script src="Release/UnityLoader.js"></script>
   </body>
-</html>
