--- a/partials/home.html
+++ b/partials/home.html
@@ -1,14 +1,17 @@
 <h1 class='title'>Welcome to Bubble Trouble</h1>
 
-<div class="aboutGame">
+<!-- <div class="aboutGame">
     <p>
         Race the clock to pop as many bubbles as you can!
     </p>
-</div>
+</div> -->
 <div class="links">
   <div class="playButton">
     <img class='playBubble' style="width:40vw;height:40vw;" src="bubble" alt=""/>
     <a class='play' href="#/game">Play!</a>
   </div>
+  <div class="aboutButton">
+    <img class='aboutBubble' style="width:25vw;height:25vw;" src="bubble" alt=""/>
     <a class='about' href="#/about">About the game</a>
+  </div>
 </div>
