about page responsiveness

--- a/partials/about.html
+++ b/partials/about.html
@@ -1,4 +1,19 @@
-<h1 class='aboutTitle'>About the creators</h1>
+<h1 class='aboutTitle'>About Bubble Trouble</h1>
 <div class="links">
-    <a class='back' href="#/">Back</a>
+    <div class="backButton">
+        <img class='backBubble' style="width:18vw;height:18vw;" src="bubble" alt=""/>
+        <a class='back' href="#/">Back</a>
+    </div>
 </div>
+<section class='aboutSection'>
+  <div class="gameSection">
+    <p class='gameText'>
+
+    </p>
+  </div>
+  <div class="creatorSection">
+    <p class='creatorText'>
+
+    </p>
+  </div>
+</section>
