--- a/partials/home.html
+++ b/partials/home.html
@@ -1,17 +1,19 @@
 <h1 class='title'>Welcome to Bubble Trouble</h1>
 
-<!-- <div class="aboutGame">
-    <p>
+<div class="aboutGame">
+    <p class='aboutText'>
         Race the clock to pop as many bubbles as you can!
     </p>
-</div> -->
+</div>
+<img class='five' style="width:25vw;height:25vw;" src="bubble" alt=""/>
+
 <div class="links">
-  <div class="playButton">
-    <img class='playBubble' style="width:40vw;height:40vw;" src="bubble" alt=""/>
-    <a class='play' href="#/game">Play!</a>
-  </div>
-  <div class="aboutButton">
-    <img class='aboutBubble' style="width:25vw;height:25vw;" src="bubble" alt=""/>
-    <a class='about' href="#/about">About the game</a>
-  </div>
+    <div class="playButton">
+        <img class='playBubble' style="width:40vw;height:40vw;" src="bubble" alt=""/>
+        <a class='play' href="#/game">Play!</a>
+    </div>
+    <div class="aboutButton">
+        <img class='aboutBubble' style="width:25vw;height:25vw;" src="bubble" alt=""/>
+        <a class='about' href="#/about">About the game</a>
+    </div>
 </div>
