--- a/main.css
+++ b/main.css
@@ -35,11 +35,12 @@ a:hover {
     position: relative;
     width: 45vw;
     height: 14%;
-    background: linear-gradient(rgba(57, 222, 230, 0.7), #DCCDF2);
+    background: linear-gradient(to bottom right, #DCCDF2, rgba(57, 222, 230, 0.7));
     left: 26%;
     border-style: outset;
     border-radius: 25px;
     padding: .3em;
+    z-index: 2;
 }
 .aboutText {
     font-size: 3vw;
@@ -47,6 +48,7 @@ a:hover {
     line-height: 1em;
     text-align: center;
     color: #5143FD !important;
+    font-weight: bold;
 }
 .play {
     z-index: 2;
@@ -104,17 +106,16 @@ a:hover {
     justify-content: space-around;
     align-items: center;
     position: absolute;
-    border: 2px red solid;
     width: 70vw;
     height: 60vh;
-    margin-top: 15%;
+    margin-top: 12%;
     left: 15%;
 }
 .gameSection, .creatorSection {
     position: relative;
     width: 28vw;
     height: 50vh;
-    background: linear-gradient(rgba(57, 222, 230, 0.7), #DCCDF2);
+    background: linear-gradient(to bottom right, #DCCDF2, rgba(57, 222, 230, 0.7));
     z-index: 2;
     border-style: outset;
     border-radius: 25px;
