moved bubble five around

--- a/partials/game.html
+++ b/partials/game.html
@@ -9,6 +9,7 @@
       <a id="back-link" href="#/">Back</a>
       <img id="back-bubble" src="Assets/bubble_thumb.png" alt="" />
     </div>
+    <img class='bubble five' style="width:25vw;height:25vw;" src="bubble" alt=""/>
     <p class="header"><span>Unity WebGL Player | </span>Bubble Trouble</p>
     <div class="template-wrap clear">
       <canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()"></canvas>
