--- a/main.css
+++ b/main.css
@@ -40,6 +40,7 @@ a:hover {
     border-style: outset;
     border-radius: 25px;
     padding: .3em;
+    padding-top: 1em;
 }
 .aboutText {
     font-size: 3vw;
