starting about page descriptions

--- a/partials/about.html
+++ b/partials/about.html
@@ -13,7 +13,7 @@
   </div>
   <div class="creatorSection">
     <p class='creatorText'>
-
+      Devin and Sarah are currently students enrolled in the Web Development Immersive Program at Galvanize, Denver. 
     </p>
   </div>
 </section>
