about page completed

--- a/partials/about.html
+++ b/partials/about.html
@@ -6,14 +6,19 @@
     </div>
 </div>
 <section class='aboutSection'>
-  <div class="gameSection">
-    <p class='gameText'>
-
-    </p>
-  </div>
-  <div class="creatorSection">
-    <p class='creatorText'>
-      Devin and Sarah are currently students enrolled in the Web Development Immersive Program at Galvanize, Denver. 
-    </p>
-  </div>
+    <div class="gameSection">
+        <p class='gameText'>
+            A simple, yet addictive game with the goal of popping as many bubbles as you can before the time runs out. Built with Unity, Xcode, and C#, Bubble Trouble is a free mobile app coming soon to the app store, but available to you now on the web.
+        </p>
+    </div>
+    <div class="creatorSection">
+        <p class='creatorText'>
+            Devin and Sarah are currently enrolled in the Web Development Immersive Program at Galvanize, Denver. They built this game to explore unfamiliar environments in software and game development. To learn more about the creators of Bubble Trouble, visit
+            the links below.
+            <br>
+            <a href="www.sarahmichelle.info">Sarah</a>
+            |
+            <a href="www.devstone.tech">Devin</a>
+        </p>
+    </div>
 </section>
