make indexgame look like game

--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -10,7 +10,7 @@
 <div class="links">
     <div class="playButton">
         <img class='playBubble' style="width:40vw;height:40vw;" src="bubble" alt=""/>
-        <a class='play' href="#/game">Play!</a>
+        <a class='play' href="#/indexgame">Play!</a>
     </div>
     <div class="aboutButton">
         <img class='aboutBubble' style="width:25vw;height:25vw;" src="bubble" alt=""/>
